# RecipeHack

./: .gitattributes  .gitignore  ALGORITHM.md  Dockerfile  FooDB.md  INSTALL.md  README.md  pyproject.toml  webpack.config.js
aws_lambda/: Dockerfile  app.py  authorizer.py  main.tf
backend/: generate.py
backend/my_fine_tuned_model/: adapter_config.json  config.json
data/: AromaPatch.csv  CategoryPatch.csv  CategorySubPatch.csv  FoodPatch.csv  analized_fv_combination.csv  analized_recipe.csv  analized_wd_combination.csv  formatted_json.json  formatted_json2.json  formatted_json_recipe.json  scaler.pkl  scaler_X.pkl  scaler_y.pkl  unusual_paring_model.json  unusual_paring_model.pkl
data/formatted_json_recipe/: 1.json  105.json  112.json  114.json  118.json  141.json  144.json  149.json  152.json  157.json  163.json  171.json  178.json  192.json  193.json  201.json  205.json  208.json  214.json  215.json  219.json  223.json  226.json  229.json  231.json  233.json  235.json  238.json  240.json  251.json  253.json  256.json  257.json  258.json  26.json  260.json  263.json  268.json  275.json  276.json  (+198 more)
data/json_recipes/: 1.json  10.json  101.json  103.json  105.json  (+466 more)
datas/: FoodPatch.csv  fine_tuned_word2vec.model  fine_tuned_word2vec_old.model  flavor_db.csv  flavor_sentences.npy  flavor_sentences.txt  molecules.csv
frontend/: .env  package-lock.json  package.json  tsconfig.json  webpack.config.js
jupyter/: .env  AnalyzeWord2Vec.ipynb  analyze_word2_vec.ipynb  app.py  build_flavor_db from_foodb.ipynb  build_flavor_db.ipynb  build_recepe_ingredients.ipynb  build_recepe_ingredients_2.ipynb  build_recipe_data.ipynb  collect_allreceipes_web.ipynb  collect_allrecipes_web.ipynb  collect_receipe_datas.ipynb  collect_recipe_datas.ipynb  do_why_test.ipynb  dump_word_list.ipynb  example_code_for_anly_vec.ipynb  example_of_association.ipynb  extract_allreceipes_detail.ipynb  flavor_db_matrix.ipynb  molecule_word2_vec.ipynb  recipe_to_word2v_data.ipynb  test_own_model.ipynb  test_word2_vec.ipynb  word2_vec_foodb.ipynb  xgboost.ipynb
(+1409 files in other folders)
