[tool.poetry]
name = "recipehack"
version = "0.1.0"
description = ""
authors = ["yes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = "^1.1.1"
networkx = "^3.3"
neo4j = "^5.24.0"
gensim = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
