[tool.poetry]
name = "recipehack"
version = "0.1.0"
description = ""
authors = ["yes"]
readme = "README.md"
packages = [
    { include = "jupyter" }
]
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = "^1.1.1"
networkx = "^3.3"
neo4j = "^5.24.0"
gensim = "^4.3.3"
scikit-learn = "^1.5.2"
selenium = "^4.25.0"
chromedriver-binary = "^131.0.6772.0.0"
webdriver-manager = "^4.0.2"
huggingface-hub = {extras = ["cli"], version = "^0.26.0"}
transformers = "^4.45.2"
torch = "^2.5.0"
accelerate = ">=0.26.0"
jsonify = "^0.5"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchainhub = "^0.1.21"
openai = "^1.52.0"
langchain-openai = "^0.2.3"
mysqlclient = "^2.2.5"
mysql-connector-python = "^9.1.0"
opencv-python = "^4.10.0.84"
dowhy = "^0.12"
seaborn = "^0.13.2"
bs4 = "^0.0.2"
requests = "^2.32.3"
xgboost = "^2.1.4"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
bottleneck = "^1.4.2"
imbalanced-learn = "^0.13.0"
shap = "^0.46.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
